# PROJECT

./: README.md  compose.yml
.github/workflows/: test.yml
backend/: .gitignore  db.py  dockerfile  main.py  pyproject.toml  settings.py
backend/src/: board_agents.py  db_tools.py  news_tools.py  routes.py  save_image.py  workflow.py
frontend/: default.conf  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx
frontend/src/api/: axiosInstance.js  boardService.js
frontend/src/components/: Chat.jsx
frontend/src/pages/: App.jsx  BoardDetail.jsx  BoardList.jsx  NotFound.jsx
frontend/src/styles/: Board.css  chat.css  global.css
